# AgenticRAGBasic

./: .gitignore  PHASE1_TASKS.md  PHASE2_BACKLOG.md  PHASE3_BACKLOG.md  PHASE3_TASKS.md  PHASE4_TASKS.md  PRD.md  README.md  TECHNICAL_DESIGN.md
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py  main_agent.py  main_knowledge.py  main_rag.py
backend/app/agent/: __init__.py
backend/app/common/: __init__.py
backend/app/core/: __init__.py  config.py  dependencies.py  logging.py
backend/app/db/: base.py  models.py  session.py  session_sync.py
backend/app/jobs/: queue.py  tasks.py  worker.py
backend/app/knowledge/: __init__.py
backend/app/rag/: __init__.py
backend/app/services/: indexing.py  ingestion.py  ingestion_task.py  jobs.py  kb.py  search_debug.py
backend/app/storage/: __init__.py  base.py  local.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_tables.py  002_add_job_progress_and_rag_configs.py  003_agent_sessions.py
backend/scripts/: init_business_db.sql
backend/tests/: conftest.py
backend/tests/integration/: test_parser_docling.py
backend/tests/unit/: test_chunk_persistence.py  test_chunker_base.py  test_chunker_docling_hybrid.py  test_chunker_markdown_header.py  test_chunker_recursive_token.py  test_chunker_table.py  test_classification.py  test_config.py  test_document_api.py  test_document_delete_cleanup.py  test_document_repository.py  test_embedding_base.py  test_health.py  test_indexing_service.py  test_ingestion_task.py  (+15 more)
failedShitCodexCode/: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  PHASE_TASKS.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
failedShitCodexCode/agentic_rag/: __init__.py  agents.py  knowledge_base.py  models.py
failedShitCodexCode/app/: __init__.py  main.py
failedShitCodexCode/data/: documents.json  eval_phase1.json
failedShitCodexCode/docs/: database_schema.md
failedShitCodexCode/migrations/: env.py
failedShitCodexCode/scripts/: run_eval.py
failedShitCodexCode/static/: app.css  app.js
failedShitCodexCode/templates/: base.html  document_detail.html  documents.html  rag.html
failedShitCodexCode/tests/: __init__.py  conftest.py  fakes.py  test_chunk_preview.py  test_chunk_preview_api.py  test_chunking.py  test_classification.py  test_db_models.py  test_document_upload.py  test_embeddings.py  test_eval.py  test_health.py  test_indexing_service.py  test_indexing_task.py  test_ingestion_service.py  test_ingestion_task.py  test_job_lifecycle.py  test_minimax_client.py  test_parser_fallback.py  test_parsing.py  test_query_processing.py  test_rag_api.py  test_repositories.py  test_reranker.py  test_retrieval.py  test_sparse.py  test_vector_store.py  test_web_pages.py
(+240 files in other folders)
