[project]
name = "agenticrag"
version = "0.1.0"
description = "Phase-1 skeleton for an Agentic RAG product."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.136.0,<0.137.0",
  "uvicorn[standard]>=0.44.0,<0.45.0",
  "httpx>=0.28.1,<0.29.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "sqlalchemy>=2.0.49,<3.0.0",
  "alembic>=1.18.4,<2.0.0",
  "psycopg[binary]>=3.3.3,<4.0.0",
  "redis>=7.4.0,<8.0.0",
  "rq>=2.8.0,<3.0.0",
  "qdrant-client>=1.15.1,<2.0.0",
  "orjson>=3.11.4,<4.0.0",
  "tenacity>=9.1.2,<10.0.0",
  "jieba>=0.42.1,<1.0.0",
  "python-multipart>=0.0.26,<0.0.27",
  "docling[rapidocr]>=2.90.0,<3.0.0",
  "torch>=2.8.0,<3.0.0",
  "transformers>=4.57.1,<5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "respx>=0.23.1,<0.24.0",
]

[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
